--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,19 +1,9 @@
-{% extends "homebase.html" %}
+{% extends 'homebase.html' %}
+
 {% load static %}
 
-{% block title %} İndex Sayfası {% endblock %}
-{% block keywords %} İndex Sayfası anahtar kelimeler {% endblock %}
-{% block description %} İndex Sayfası açıklama {% endblock %}
+{% block title %} {{ setting.title }} {% endblock %}
+{% block description %} {{ setting.description }} {% endblock %}
+{% block keywords %} {{ setting.keywords }} {% endblock %}
 
-{% block sidebar %}
-   {% include "sidebar.html" %}
-{% endblock %}
-
-{% block slider %}
-  {% include "slider.html" %}
-{% endblock %}
-
-
-{% block body %}
-   {% include "content.html" %}
-{% endblock %}
+{% block body %} {% include 'content.html' %}  {% endblock %}
