--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
-   <meta charset="utf-8">
-    <title> {% block title %} Emlak Kiralama {% endblock %} </title>
-    <meta name = "keywords" content= {% block keywords %} Anasayfa anahtar kelimeler {% endblock %}>
-    <meta name = "description" content= {% block description %} Anasayfa kısa açıklama {% endblock %}>
+
+    <meta charset="utf-8">
+    <title>{% block title %}Emlak Kiralama{% endblock %}</title>
+    <meta name="keywords" content="{% block keywords %}Anasayfa anahtar kelimeler{% endblock %}">
+    <meta name="description" content="{% block description %}Anasayfa kısa açıklama{% endblock %}">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="{% static 'img/favicon.icon' %}" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,22 +21,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="{% static 'lib/animate/animate.min.css' %}" rel="stylesheet">
+    <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    {%load static%}
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
     <!-- Template Stylesheet -->
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+     {% block head %} {% endblock %}
 </head>
 <body>
+
     {% include "header.html" %}
-    {% block sidebar %} {% endblock %}
-    {% block slider %} {% endblock %}
     {% block content %} {% endblock %}
     {% block body %} {% endblock %}
     {% include "footer.html" %}
+
 </body>
 </html>
