--- a/home/templates/footer.html
+++ b/home/templates/footer.html
@@ -1,6 +1,4 @@
- <!-- Footer Start -->
- {% load static %}
-        <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+ <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
@@ -79,17 +77,21 @@
         </div>
         <!-- Footer End -->
 
-    <div>
+
         <!-- Back to Top -->
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
+
     <!-- JavaScript Libraries -->
-    <script src='{% static "https://code.jquery.com/jquery-3.4.1.min.js" %}' ></script>
-    <script src='{% static "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" %}'></script>
-    <script src='{% static "lib/wow/wow.min.js" %}'></script>
-    <script src='{% static "lib/easing/easing.min.js"%}'></script>
-    <script src='{% static "lib/waypoints/waypoints.min.js"%}'></script>
-    <script src='{% static "lib/owlcarousel/owl.carousel.min.js"%}'></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src='{% static "js/main.js"%}'></script>
+    <script src="js/main.js"></script>
+</body>
+
+</html>
