--- a/home/templates/footer.html
+++ b/home/templates/footer.html
@@ -60,7 +60,7 @@
             </h5>
             <div>
               <div class="img-box">
-                <img src="images/location.png" width="18px" alt="">
+                <img src="{% static 'images/location.png' %}" width="18px" alt="">
               </div>
               <p>
                 Address
@@ -68,7 +68,7 @@
             </div>
             <div>
               <div class="img-box">
-                <img src="images/phone.png" width="12px" alt="">
+                <img src="{% static 'images/phone.png' %}" width="12px" alt="">
               </div>
               <p>
                 +01 1234567890
@@ -147,16 +147,16 @@
             </form>
             <div class="social_box">
               <a href="">
-                <img src="images/fb.png" alt="">
+                <img src="{% static 'images/fb.png' %}" alt="">
               </a>
               <a href="">
-                <img src="images/twitter.png" alt="">
+                <img src="{% static 'images/twitter.png' %}" alt="">
               </a>
               <a href="">
-                <img src="images/linkedin.png" alt="">
+                <img src="{% static 'images/linkedin.png' %}" alt="">
               </a>
               <a href="">
-                <img src="images/youtube.png" alt="">
+                <img src="{% static 'images/youtube.png' %}" alt="">
               </a>
             </div>
           </div>
@@ -180,9 +180,9 @@
   <!-- end  footer section -->
 
 
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
-  <script type="text/javascript" src="js/custom.js"></script>
+  <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
 
 
 </body>
