--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -7,9 +7,9 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="keywords" content="anahtar kelime" />
+  <meta name="description" content="tanımlama" />
+  <meta name="author" content="kişisel bilgi" />
 
   <title>Teaser</title>
 
@@ -25,7 +25,7 @@
   <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
 </head>
 
-<body class="sub_page">
+<body >
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
@@ -75,4 +75,29 @@
       </div>
     </header>
     <!-- end header section -->
+        <!-- slider section -->
+    <section class="slider_section ">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-4 offset-md-1">
+            <div class="detail-box">
+              <h1>
+                <span> Modern</span> <br>
+                Apartment <br>
+                House
+              </h1>
+              <p>
+                It is a long established fact that a reader will be distracted by the readable content of
+              </p>
+              <div class="btn-box">
+                <a href="" class="">
+                  Read More
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end slider section -->
   </div>
