--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -77,7 +77,7 @@
       <div class="sale_container">
         <div class="box">
           <div class="img-box">
-            <img src="images/s-1.jpg" alt="">
+            <img src="{% static 'images/s-1.jpg' %}" alt="">
           </div>
           <div class="detail-box">
             <h6>
@@ -90,7 +90,7 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/s-2.jpg" alt="">
+            <img src="{% static 'images/s-2.jpg' %}" alt="">
           </div>
           <div class="detail-box">
             <h6>
@@ -103,7 +103,7 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/s-3.jpg" alt="">
+            <img src="{% static 'images/s-3.jpg' %}" alt="">
           </div>
           <div class="detail-box">
             <h6>
@@ -116,7 +116,7 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/s-4.jpg" alt="">
+            <img src="{% static 'images/s-4.jpg' %}" alt="">
           </div>
           <div class="detail-box">
             <h6>
@@ -129,7 +129,7 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/s-5.jpg" alt="">
+            <img src="{% static 'images/s-5.jpg' %}" alt="">
           </div>
           <div class="detail-box">
             <h6>
@@ -142,7 +142,7 @@
         </div>
         <div class="box">
           <div class="img-box">
-            <img src="images/s-6.jpg" alt="">
+            <img src="{% static 'images/s-6.jpg' %}" alt="">
           </div>
           <div class="detail-box">
             <h6>
@@ -333,10 +333,10 @@
         <div class="col-md-6">
           <div class="img-box">
             <div class="box b1">
-              <img src="images/d-1.jpg" alt="">
+              <img src="{% static 'images/d-1.jpg' %}" alt="">
             </div>
             <div class="box b1">
-              <img src="images/d-2.jpg" alt="">
+              <img src="{% static 'images/d-2.jpg' %}" alt="">
             </div>
           </div>
         </div>
@@ -360,7 +360,7 @@
         <div class="col-md-3 col-sm-6">
           <div class="box">
             <div class="img-box">
-              <img src="images/u-1.png" alt="">
+              <img src="{% static 'images/u-1.png' %}" alt="">
             </div>
             <div class="detail-box">
               <h3 class="price">
@@ -375,7 +375,7 @@
         <div class="col-md-3 col-sm-6">
           <div class="box">
             <div class="img-box">
-              <img src="images/u-2.png" alt="">
+              <img src="{% static 'images/u-2.png' %}" alt="">
             </div>
             <div class="detail-box">
               <h3>
@@ -390,7 +390,7 @@
         <div class="col-md-3 col-sm-6">
           <div class="box">
             <div class="img-box">
-              <img src="images/u-3.png" alt="">
+              <img src="{% static 'images/u-3.png' %}" alt="">
             </div>
             <div class="detail-box">
               <h3>
@@ -405,7 +405,7 @@
         <div class="col-md-3 col-sm-6">
           <div class="box">
             <div class="img-box">
-              <img src="images/u-4.png" alt="">
+              <img src="{% static 'images/u-4.png' %}" alt="">
             </div>
             <div class="detail-box">
               <h3>
@@ -443,7 +443,7 @@
             <div class="carousel-item active">
               <div class="box">
                 <div class="img-box">
-                  <img src="images/client.jpg" alt="">
+                  <img src="{% static 'images/client.jpg' %}" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -461,7 +461,7 @@
             <div class="carousel-item">
               <div class="box">
                 <div class="img-box">
-                  <img src="images/client.jpg" alt="">
+                  <img src="{% static 'images/client.jpg' %}" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -479,7 +479,7 @@
             <div class="carousel-item">
               <div class="box">
                 <div class="img-box">
-                  <img src="images/client.jpg" alt="">
+                  <img src="{% static 'images/client.jpg' %}" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
