--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -13,6 +13,7 @@
     <title>Login</title>
 </head>
 <body>
+<a href="/" class="btn btn-danger mt-3">Anasayfa</a>
     <div class="container" id="container">
         <div class="form-container sign-up-container">
             <form action="{% url 'account:register' %}" method="POST">
