--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -13,6 +13,7 @@
     <title>Register</title>
 </head>
 <body>
+<a href="/" class="btn btn-danger mt-3">Anasayfa</a>
     <div class="container1 right-panel-active p-0 m-0" id="container">
             <div class='row w-100' style='margin: 0'>
                 <div class='col-sm-12 col-md-6 col-lg-6 p-0'>
