--- a/templates/renting/home.html
+++ b/templates/renting/home.html
@@ -114,6 +114,8 @@
                                         <li><a href="/">Anasayfa</a></li>
                                         <li><a href="/about/">Hakkımızda</a> </li>
                                         <li><a href="/contact/">İletişim</a></li>
+                                        <li><a href="/faq/">SSS</a></li>
+                                        <li><a href="/profile/">Hesabım</a></li>
                                     </ul>
                                 </div>
                             </nav>
