--- a/templates/renting/panel.html
+++ b/templates/renting/panel.html
@@ -54,6 +54,7 @@
                 </div>
             </div>
         </div>
+
         <!-- ltn__header-top-area end -->
         
         <!-- ltn__header-middle-area start -->
@@ -224,8 +225,8 @@
 
 
           <!-- All JS Plugins -->
-    <script src="js/plugins.js"></script>
+    <script src="{% static 'rent/js/plugins.js' %}"></script>
     <!-- Main JS -->
-    <script src="js/main.js"></script>
+    <script src="{% static 'rent/js/main.js' %}"></script>
 </body>
 </html>
